Fixes issue overflow issue in firefox

--- a/src/client/flogo/flow/flow.component.less
+++ b/src/client/flogo/flow/flow.component.less
@@ -16,8 +16,7 @@
   flex: 1;
   flex-direction: column;
   width: 100%;
-
-  transition: width .5s;
+  max-width: 100%;
 }
 
 .diagram-container {
